Ironed out bugs within the persistent state and pipeline patching